Adding more dependencies for android client